--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">geekbrains_1</string>
+    <string name="bigbutton">BIGBUTTON</string>
+    <string name="togglebutton">ToggleButton</string>
 </resources>
